# Parallel-Programming-Projects

./: README.md
Final Project/: README.md  README_m3.md  cleanfile.sh  final  m1  m1.slurm  m2  m2.slurm  m3  m3.slurm  run.sh
Final Project/project/: CMakeLists.txt  ece408net.cc  ece408net.h  final.cc  m1.cc  m2.cc
Final Project/project/m3/baseline/: analysis_file.ncu-rep  new-forward.cu
Final Project/project/m3/op_0/: m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_1/: analysis_file.ncu-rep  m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_10/: m3.out  new-forward.cu  time.out
Final Project/project/m3/op_2/: analysis_file.ncu-rep  m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_3/: analysis_file.ncu-rep  m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_4/: m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_5/: m3.out  new-forward.cu  profile.out  time.out
Final Project/project/m3/op_9/: m3.out  new-forward.cu  profile.out  time.out
Final Project/project/src/: CMakeLists.txt  mnist.cc
Final Project/project/src/layer/custom/: cpu-new-forward.cc  cpu-new-forward.h  gpu-new-forward.h  new-forward.cu
lab0/: Makefile  README.md  job.slurm  lab0  lab0.cu
lab1/: Makefile  README.md  job.slurm  lab1  lab1.cu
lab2/: Makefile  README.md  job.slurm  lab2  lab2.cu  lab2.err
lab3/: Makefile  README.md  job.slurm  lab3  lab3.cu
lab4/: Makefile  README.md  job.slurm  lab4  lab4.cu  lab4.err
lab5/: Makefile  README.md  job.slurm  lab5  lab5.cu
lab6/: Makefile  README.md  job.slurm  lab6  lab6.cu  lab6.err
lab7/: Makefile  README.md  job.slurm  lab7  lab7.cu
lab8/: Makefile  README.md  job.slurm  lab8  lab8.cu  lab8.err
